uix generation SVG in sweep is now optional

--- a/uix/templates/sweep.html
+++ b/uix/templates/sweep.html
@@ -3,10 +3,12 @@
 
 <form id="parameterForm">
     <div>
+        <label for="enableSimulation">Enable SVG Generation:</label>
+        <input type="checkbox" id="enableSVGinSweep" name="enable SVG"><br>
         <label for="enableSimulation">Enable Sweep Simulation:</label>
-        <input type="checkbox" id="enableSimulation" name="enableSimulation">
+        <input type="checkbox" id="enableSimulation" name="enable Simulation"><br>
     </div>
-    
+
     <fieldset class="parameter-row">
         <legend>Apothem</legend>
         <label for="apothemFrom">From:</label>
